# asset-lens

./: .dockerignore  .env.example  .env.qq_push.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT_REPORT.md  DEVELOPMENT_ROADMAP.md  Dockerfile  Dockerfile.demo  FINAL_VERIFICATION.md  FUND_STOCK_MONITOR_REPORT.md  GITNEXUS_ANALYSIS_REPORT.md  HIGH_RISK_DEPLOYMENT_REPORT.md  IMMEDIATE_ACTIONS.md  INVESTMENT_10000_MONITOR_REPORT.md  Makefile  NEXT_STEPS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_COMPLETED.md  OPTIMIZATION_EXAMPLES.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_INDEX.md  OPTIMIZATION_README.md  OPTIMIZATION_SUMMARY.md  PROJECT_PLAN_20260314.md  QUICKSTART.md  QUICK_WINS.md  README.md  README.zh-CN.md  RELEASE_NOTES_v1.0.1.md  SHARE.md  STOCK_TRADING_SYSTEM_REPORT.md  TODO.md  TODO_NEW.md  WORK_SUMMARY.md  analyze_fund_stocks.py  asset_lens_market_guide.md  backtest_optimized.py  (+80 more)
.github/workflows/: ci.yml
asset_lens/: __init__.py  __main__.py  cli.py  cli_new.py  config.py
asset_lens/ai/: __init__.py  cache_manager.py  prompt_builder.py  result_parser.py
asset_lens/analysis/: __init__.py  ai_qa.py  alert_monitor.py  announcement_monitor.py  backtest_reporter.py  black_swan.py  dashboard.py  dashboard_models.py  ml_tracker.py  model_retrainer.py  portfolio_analyzer.py  portfolio_models.py  premarket_analyzer.py  rebalancer.py  review_models.py  signal_pusher.py  trade_logger.py  trading_review.py
asset_lens/analyzers/: __init__.py  evaluation_analyzer.py  portfolio_analyzer.py  risk_analyzer.py
asset_lens/api/: main.py  response.py
asset_lens/cli/: __init__.py  __main__.py  analysis_commands.py  analyze.py  compare.py  core.py  data.py  data_commands.py  db.py  helpers.py  interactive_commands.py  ml.py  monitor.py  monitor_commands.py  predict.py  report.py  report_commands.py  stock_pool.py  strategy.py  strategy_commands.py  system_commands.py
asset_lens/cli_modules/: __init__.py  analysis.py  data.py  interactive.py  report.py  strategy.py
asset_lens/core/: __init__.py  advanced_analysis.py  advanced_analytics.py  advanced_strategies.py  ai_analyzer.py  cache_interface.py  cache_manager.py  comparison.py  config_manager.py  config_validator.py  daily_estimate.py  dca_parser.py  enhanced_cache_manager.py  exceptions.py  holidays.py  intelligent_cache.py  irr_algorithms.py  irr_calculator.py  market_sentiment.py  platform_loader.py  portfolio_analytics.py  portfolio_comparator.py  realtime_pnl.py  realtime_pnl_config.py  sold_investment.py  time_group.py
asset_lens/data/: __init__.py  advanced_strategies.py  ai_stock_advisor.py  asset_summary_parser.py  async_market_data_fetcher.py  auto_trader.py  backtester.py  backup_manager.py  baostock_session.py  chart_generator.py  comparison.py  concurrent_fetcher.py  crypto_fetcher.py  csv_data_loader.py  csv_irr.py  csv_parser.py  data_coverage_analyzer.py  data_fetcher_enhanced.py  domestic_index_fetcher.py  enhanced_market_data_fetcher.py  enhanced_stock_fetcher.py  exchange_rate_parser.py  feature_builder.py  foreign_index_fetcher.py  fund_fetcher.py  fundamental_fetcher.py  futures_fetcher.py  industry_flow.py  industry_flow_web_sources.py  intelligent_recommender.py  international_stock_fetcher.py  investment_system.py  macro_economic_fetcher.py  market_data_fetcher.py  market_environment.py  market_index.py  market_stock_fetcher.py  market_stock_prices.py  market_stock_sources.py  models.py  (+33 more)
asset_lens/db/: __init__.py  database.py  migration.py  models.py  north_flow_db.py  optimizer.py
asset_lens/goals/: __init__.py
asset_lens/ml/: __init__.py  adaptive_trainer.py  advanced_trainer.py  ai_trader.py  ai_trader_execution.py  ai_trader_models.py  backtest.py  backtest_execution.py  features.py  predictor.py  predictor_model.py  predictor_predict.py  sector_data_builder.py  sector_ml.py  sector_rotation.py  technical_indicators.py  trainer.py
asset_lens/monitoring/: investment_monitor.py  metrics.py  risk_alert.py  risk_alert_checks.py  risk_analyzer.py  risk_manager.py
asset_lens/notification/: __init__.py  enhanced_notification.py  notification_models.py  service.py
asset_lens/report/: __init__.py  analysis_evaluation.py  analyzer.py  (+19 more)
config/: akshare_config.json  asset_lens.yaml  data_config.json  fund_stock_codes.json.example  investment_types.json.example  platforms.json.example  stock_filter.json.example
data/: bonus_records.json.example
models/: lightgbm_optimization.json  lightgbm_optimized_result.json  lightgbm_result.json  lightgbm_tscv_optimization.json  lightgbm_tscv_result.json  optimization_v2_lite_results.json
results/: optimization_results.json  optimization_v4_results.json  optimization_v6_results.json  optimization_v7_results.json
scripts/: batch_fetch_history.py  build_sector_dataset.py  create_tracking_system.py  fund_holding_analysis.py  generate_anonymized_data.py  get_ml_stocks.py  momentum_screen.py  optimize_hyperparams.py  optimize_ml.py  optimize_ml_v2.py  seed_demo.py  start_demo.py  sync_data.py  test_ai_token.py  trading_analyzer.py  train_sector_model.py
tests/: __init__.py  conftest.py  conftest_mock.py  test_advanced_analysis.py  test_advanced_analytics.py  test_advanced_strategies.py  test_advanced_trainer.py  test_ai_analyzer.py  test_ai_components.py  test_ai_modules.py  test_ai_qa.py  test_ai_stock_advisor.py  test_alert_monitor.py  test_analysis_modules.py  test_analyze_commands_enhanced.py  test_analyzers.py  test_announcement_monitor.py  test_api.py  test_asset_summary_parser.py  test_async_market_data_fetcher.py  test_auto_trader.py  test_backtest_reporter.py  test_backtester.py  test_backup_manager.py  test_black_swan.py  test_cache_manager.py  test_calculate_report.py  test_chart_generator.py  test_charts.py  test_cli.py  test_cli_additional.py  test_cli_commands.py  test_cli_modules.py  test_cli_registration.py  test_cli_utils.py  test_comparison.py  test_config.py  test_config_manager.py  test_config_validator.py  test_crypto_fetcher.py  (+119 more)
web-react/: index.html  package-lock.json  package.json  vite.config.ts
(+213 files in other folders)
