[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-lens"
version = "1.0.0"
description = "个人资产分析系统 - 投资组合分析、股票基金查询、策略筛选、自动化监控"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
authors = [
    {name = "asset-lens team"}
]
keywords = [
    "finance",
    "investment",
    "stock",
    "fund",
    "portfolio",
    "analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "investkit-utils[db]",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "aiohttp>=3.11.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.0",
    "typing_extensions>=4.0.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "tenacity>=9.1.4",
    "numpy-financial>=1.0.0",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
    "reportlab>=4.5.1",
]

[project.optional-dependencies]
data = [
    "akshare>=1.17.0",
    "tushare>=1.3.0",
    "baostock>=0.8.9",
    "efinance>=0.5.0",
]

viz = [
    "matplotlib>=3.7.0",
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    "scipy>=1.10.0",
    "sqlalchemy>=2.0.0",
]

web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "csvkit>=2.0.0",
]

ai = [
    "litellm>=1.83.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.9.0,<1.13.0",
    "python-magic>=0.4.27",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.21.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "types-requests>=2.28.0",
    "types-PyYAML>=6.0.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

all = [
    "asset-lens[data,viz,web,ai,dev]",
]

[project.scripts]
asset-lens = "asset_lens.cli:cli"

[project.urls]
Homepage = "https://github.com/asset-lens/asset-lens"
Documentation = "https://github.com/asset-lens/asset-lens#readme"
Repository = "https://github.com/asset-lens/asset-lens"
Issues = "https://github.com/asset-lens/asset-lens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["asset_lens*"]

[tool.setuptools.package-data]
asset_lens = ["py.typed"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["no-any-return", "attr-defined", "assignment", "no-member", "no-value-for-parameter", "not-callable", "unsupported-assignment-operation", "unsubscriptable-object", "valid-type", "misc", "import-not-found", "import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::urllib3.exceptions.InsecureRequestWarning",
    "ignore::pluggy.PluggyTeardownRaisedWarning",
]

[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.coverage.run]
source = ["asset_lens"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "PERF", "RUF"]
ignore = ["S101", "RUF001", "RUF002", "RUF003", "PERF203", "PERF401", "RUF012", "SIM117", "E501", "E402", "N806", "N803", "E741", "B008", "SIM115", "UP041", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B", "RUF012", "N806", "E501"]
"asset_lens/web/api.py" = ["E402"]
"asset_lens/web/dashboard_enhanced.py" = ["E501"]
"asset_lens/web/routes/chat.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["asset_lens"]

[tool.uv.sources]
investkit-utils = { workspace = true }
