[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-lens"
version = "1.0.0"
description = "个人资产分析系统 - 投资组合分析、股票基金查询、策略筛选、自动化监控"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
authors = [
    {name = "asset-lens team"}
]
keywords = [
    "finance",
    "investment",
    "stock",
    "fund",
    "portfolio",
    "analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "investkit-utils[db]",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "aiohttp>=3.11.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.0",
    "typing_extensions>=4.0.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "numpy-financial>=1.0.0",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
    "reportlab>=4.5.1",
    "yfinance>=1.3.0",
    "sqlalchemy>=2.0.0",
    "scipy>=1.10.0",
    "jinja2>=3.1.0",
    "tushare>=1.4.29",
    "baostock>=0.9.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
data = [
    "akshare>=1.17.0",
    "tushare>=1.3.0",
    "baostock>=0.8.9",
    "efinance>=0.5.0",
]

viz = []

web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

ai = [
    "litellm>=1.83.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.3.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "types-PyYAML>=6.0.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

all = [
    "asset-lens[data,viz,web,ai,dev]",
]

[project.scripts]
asset-lens = "asset_lens.cli:cli"

[project.urls]
Homepage = "https://github.com/asset-lens/asset-lens"
Documentation = "https://github.com/asset-lens/asset-lens#readme"
Repository = "https://github.com/asset-lens/asset-lens"
Issues = "https://github.com/asset-lens/asset-lens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["asset_lens*"]

[tool.setuptools.package-data]
asset_lens = ["py.typed"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true


[tool.coverage.run]
source = ["asset_lens"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
extend = "../pyproject.toml"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B", "RUF012", "N806", "E501"]
"asset_lens/web/api.py" = ["E402"]
"asset_lens/web/dashboard_enhanced.py" = ["E501"]
"asset_lens/web/routes/chat.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["asset_lens"]

[tool.uv.sources]
investkit-utils = { git = "https://github.com/erishen/investkit_utils.git" }
